--- a/blocks/slider/slider.css
+++ b/blocks/slider/slider.css
@@ -7,7 +7,3 @@
     position: relative;
     height: 20em;
 }
-
-.slider {
-    overflow: hidden;
-}
